--- a/assets/thanks.txt
+++ b/assets/thanks.txt
@@ -2,4 +2,9 @@ Luca Quartero
 Jeff Skyrunner
 Fabrizio Calva
 Flavio Calva
+Damiana Ercolani
 Dario Murgia
+Jonathan Casazza
+Sara Quartero
+Rudy Quartero
+Teresa Montanaro
