using the gui with the keyboard

--- a/assets/thanks.txt
+++ b/assets/thanks.txt
@@ -8,3 +8,12 @@ Jonathan Casazza
 Sara Quartero
 Rudy Quartero
 Teresa Montanaro
+Marco Baronio
+GianFranco Turrin
+Francesco Maiorano
+Elena Accotto
+Edoardo Caniati
+Michele Formiga
+Tamara Milani
+Christian Costanzo
+Andrea Grisoglio
