fixes for deploy-ng

--- a/assets/thanks.txt
+++ b/assets/thanks.txt
@@ -1,9 +1,5 @@
-Luca Quartero
-Jeff Skyrunner
 Fabrizio Calva
-Flavio Calva
-Damiana Ercolani
-Dario Murgia
+ArcDusky
 Jonathan Casazza
 Sara Quartero
 Rudy Quartero
