--- a/assets/locale/it_IT/LC_MESSAGES/yorg.po
+++ b/assets/locale/it_IT/LC_MESSAGES/yorg.po
@@ -17,6 +17,146 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#: menu/mainpage.py:86
+msgid "Single Player"
+msgstr "Giocatore singolo"
+
+#: menu/mainpage.py:87
+msgid "Multiplayer"
+msgstr "Multiplayer"
+
+#: menu/mainpage.py:88
+msgid "Options"
+msgstr "Opzioni"
+
+#: menu/mainpage.py:89
+msgid "Support us"
+msgstr "Supportaci"
+
+#: menu/mainpage.py:90
+msgid "Credits"
+msgstr "Riconoscimenti"
+
+#: menu/mainpage.py:91
+msgid "Quit"
+msgstr "Esci"
+
+#: menu/mainpage.py:119
+msgid "NB the game is work-in-progress"
+msgstr "NB il gioco è in sviluppo"
+
+#: menu/mainpage.py:162 menu/mainpage.py:165
+msgid "Last news:"
+msgstr "Ultime notizie:"
+
+#: menu/mainpage.py:181 menu/mainpage.py:184
+msgid "show"
+msgstr "vedi"
+
+#: menu/inputpage.py:43 menu/inputpage.py:46
+msgid "Use the joypad when present"
+msgstr "Usa il joypad se presente"
+
+#: menu/inputpage.py:67
+msgid "Accelerate"
+msgstr "Accelerazione"
+
+#: menu/inputpage.py:68
+msgid "Brake/Reverse"
+msgstr "Frena/Indietro"
+
+#: menu/inputpage.py:69
+msgid "Left"
+msgstr "Sinistra"
+
+#: menu/inputpage.py:70
+msgid "Right"
+msgstr "Destra"
+
+#: menu/inputpage.py:71
+msgid "Weapon"
+msgstr "Arma"
+
+#: menu/inputpage.py:72
+msgid "Respawn"
+msgstr "Respawn"
+
+#: menu/inputpage.py:73
+msgid "Pause"
+msgstr "Pausa"
+
+#: menu/inputpage.py:81
+msgid "Press the key to record it"
+msgstr "Premi il tasto per memorizzarlo"
+
+#: menu/optionpage.py:68
+msgid "Language"
+msgstr "Lingua"
+
+#: menu/optionpage.py:73
+msgid "Volume"
+msgstr "Volume"
+
+#: menu/optionpage.py:78
+msgid "Fullscreen"
+msgstr "Schermo intero"
+
+#: menu/optionpage.py:84
+msgid "Resolution"
+msgstr "Risoluzione"
+
+#: menu/optionpage.py:94
+msgid "Antialiasing"
+msgstr "Antialiasing"
+
+#: menu/optionpage.py:99
+msgid "(from the next execution)"
+msgstr "(dalla prossima esecuzione)"
+
+#: menu/optionpage.py:103
+msgid "Shaders"
+msgstr "Shaders"
+
+#: menu/optionpage.py:107
+msgid "Cars number"
+msgstr "Numero macchine"
+
+#: menu/optionpage.py:121
+msgid "Configure input"
+msgstr "Configura input"
+
+#: menu/singleplayerpage.py:39
+msgid "Single race"
+msgstr "Gara singola"
+
+#: menu/singleplayerpage.py:40
+msgid "New season"
+msgstr "Nuova stagione"
+
+#: menu/singleplayerpage.py:41
+msgid "Continue season"
+msgstr "Continua stagione"
+
+#: menu/clientpage.py:33
+msgid "Client"
+msgstr "Client"
+
+#: menu/clientpage.py:39
+msgid "insert the server address"
+msgstr "inserisci l'indirizzo del server"
+
+#: menu/clientpage.py:41
+msgid "Connect"
+msgstr "Connetti"
+
+#: menu/clientpage.py:54
+msgid "Waiting for the server"
+msgstr "Aspettando il server"
+
+#: menu/clientpage.py:57
+msgid "Error"
+msgstr "Errore"
+
 #: menu/creditpage.py:12
 msgid "Code"
 msgstr "Codice"
@@ -37,174 +177,50 @@ msgstr "Testing"
 msgid "Supporters"
 msgstr "Supporters"
 
-#: menu/inputpage.py:42 menu/inputpage.py:45
-msgid "Use the joypad when present"
-msgstr "Usa il joypad se presente"
-
-#: menu/inputpage.py:66
-msgid "Accelerate"
-msgstr "Accelerazione"
-
-#: menu/inputpage.py:67
-msgid "Brake/Reverse"
-msgstr "Frena/Indietro"
-
-#: menu/inputpage.py:68
-msgid "Left"
-msgstr "Sinistra"
-
-#: menu/inputpage.py:69
-msgid "Right"
-msgstr "Destra"
-
-#: menu/inputpage.py:70
-msgid "Weapon"
-msgstr "Arma"
-
-#: menu/inputpage.py:71
-msgid "Respawn"
-msgstr "Respawn"
-
-#: menu/inputpage.py:79
-msgid "Press the key to record it"
-msgstr "Premi il tasto per memorizzarlo"
-
-#: menu/optionpage.py:63
-msgid "Language"
-msgstr "Lingua"
-
-#: menu/optionpage.py:68
-msgid "Volume"
-msgstr "Volume"
-
-#: menu/optionpage.py:73
-msgid "Fullscreen"
-msgstr "Schermo intero"
-
-#: menu/optionpage.py:79
-msgid "Resolution"
-msgstr "Risoluzione"
-
-#: menu/optionpage.py:89
-msgid "Antialiasing"
-msgstr "Antialiasing"
-
-#: menu/optionpage.py:94
-msgid "(from the next execution)"
-msgstr "(dalla prossima esecuzione)"
-
-#: menu/optionpage.py:104
-msgid "Configure input"
-msgstr "Configura input"
-
-#: menu/carpage.py:41
-msgid "Select the car"
-msgstr "Seleziona la macchina"
-
-#: menu/carpage.py:73 menu/driverpage.py:91
-msgid "adherence"
-msgstr "aderenza"
-
-#: menu/carpage.py:73 menu/driverpage.py:91
-msgid "speed"
-msgstr "velocità:"
-
-#: menu/carpage.py:74 menu/driverpage.py:92
-msgid "stability"
-msgstr "stabilità"
-
-#: menu/thankspage.py:15
-msgid "Thanks to: "
-msgstr "Grazie a:"
-
-#: menu/trackpage.py:35
+#: menu/trackpage.py:36
 msgid "Select the track"
 msgstr "Seleziona la pista"
 
-#: menu/driverpage.py:53
+#: menu/thankspage.py:15
+msgid "Thanks to: "
+msgstr "Grazie a: "
+
+#: menu/driverpage.py:54
 msgid "Select the driver"
 msgstr "Seleziona il pilota"
 
-#: menu/driverpage.py:58
+#: menu/driverpage.py:59
 msgid "Write your name:"
 msgstr "Scrivi il tuo nome:"
 
-#: menu/driverpage.py:63 menu/driverpage.py:127 menu/driverpage.py:128
-#: menu/driverpage.py:129 menu/driverpage.py:131 menu/driverpage.py:134
+#: menu/driverpage.py:64 menu/driverpage.py:129 menu/driverpage.py:130
+#: menu/driverpage.py:131 menu/driverpage.py:133 menu/driverpage.py:136
 msgid "your name"
 msgstr "tuo nome"
 
-#: menu/mainpage.py:82
-msgid "Single Player"
-msgstr "Giocatore singolo"
+#: menu/driverpage.py:92 menu/carpage.py:91
+msgid "adherence"
+msgstr "aderenza"
 
-#: menu/mainpage.py:83
-msgid "Multiplayer"
-msgstr "Multiplayer"
+#: menu/driverpage.py:92 menu/carpage.py:91
+msgid "speed"
+msgstr "velocità:"
 
-#: menu/mainpage.py:84
-msgid "Options"
-msgstr "Opzioni"
+#: menu/driverpage.py:93 menu/carpage.py:92
+msgid "stability"
+msgstr "stabilità"
 
-#: menu/mainpage.py:85
-msgid "Support us"
-msgstr "Supportaci"
-
-#: menu/mainpage.py:86
-msgid "Credits"
-msgstr "Riconoscimenti"
-
-#: menu/mainpage.py:87
-msgid "Quit"
-msgstr "Esci"
-
-#: menu/mainpage.py:149
-msgid "Last news:"
-msgstr "Ultime notizie:"
-
-#: menu/mainpage.py:160
-msgid "show"
-msgstr "vedi"
-
-#: menu/clientpage.py:33
-msgid "Client"
-msgstr "Client"
-
-#: menu/clientpage.py:38
-msgid "insert the server address"
-msgstr "inserisci l'indirizzo del server"
-
-#: menu/clientpage.py:40
-msgid "Connect"
-msgstr "Connetti"
-
-#: menu/clientpage.py:53
-msgid "Waiting for the server"
-msgstr "Aspettando il server"
-
-#: menu/clientpage.py:56
-msgid "Error"
-msgstr "Errore"
+#: menu/carpage.py:45
+msgid "Select the car"
+msgstr "Seleziona la macchina"
 
 #: menu/serverpage.py:41
 msgid "connection from "
-msgstr "connessione da"
+msgstr "connessione da "
 
 #: menu/serverpage.py:75
 msgid "Start"
 msgstr "Avvia"
-
-#: menu/singleplayerpage.py:39
-msgid "Single race"
-msgstr "Gara singola"
-
-#: menu/singleplayerpage.py:40
-msgid "New season"
-msgstr "Nuova stagione"
-
-#: menu/singleplayerpage.py:41
-msgid "Continue season"
-msgstr "Continua stagione"
 
 #: menu/exitmenu/exitpage.py:15
 msgid ""
@@ -242,135 +258,143 @@ msgstr "torna al gioco"
 msgid "back to the main menu"
 msgstr "torna al menu principale"
 
-#: yorg/fsm.py:42 yorg/fsm.py:101
+#: yorg/fsm.py:46 yorg/fsm.py:107
 msgid "desert"
 msgstr "deserto"
 
-#: yorg/fsm.py:42 yorg/fsm.py:101
+#: yorg/fsm.py:46 yorg/fsm.py:107
 msgid "mountain"
 msgstr "montagna"
 
-#: yorg/fsm.py:42 yorg/fsm.py:101
+#: yorg/fsm.py:46 yorg/fsm.py:108
 msgid "amusement park"
 msgstr "luna park"
 
-#: yyagl/engine/gui/page.py:145
-msgid "Back"
-msgstr "Indietro"
+#: yorg/fsm.py:47 yorg/fsm.py:109
+msgid "countryside"
+msgstr "campagna"
 
-#: yyagl/engine/gui/mainpage.py:39
-msgid "version: "
-msgstr "versione: "
-
-#: yyagl/racing/car/logic.py:535
+#: yyagl/racing/car/logic.py:665
 msgid "wrong way"
 msgstr "direzione sbagliata"
 
-#: yyagl/racing/car/gui.py:192
+#: yyagl/racing/car/gui.py:133
 msgid "speed:"
 msgstr "velocità:"
 
-#: yyagl/racing/car/gui.py:194
+#: yyagl/racing/car/gui.py:135
 msgid "lap:"
 msgstr "giro:"
 
-#: yyagl/racing/car/gui.py:195
+#: yyagl/racing/car/gui.py:136
 msgid "time:"
 msgstr "tempo:"
 
-#: yyagl/racing/car/gui.py:196
+#: yyagl/racing/car/gui.py:137
 msgid "best lap:"
 msgstr "miglior giro:"
 
-#: yyagl/racing/car/gui.py:197
+#: yyagl/racing/car/gui.py:138
 msgid "ranking:"
 msgstr "classifica:"
 
-#: yyagl/racing/car/gui.py:198
+#: yyagl/racing/car/gui.py:139
 msgid "damages:"
 msgstr "danni:"
 
-#: yyagl/racing/car/gui.py:207 yyagl/racing/car/gui.py:210
+#: yyagl/racing/car/gui.py:140
+msgid "weapon:"
+msgstr "arma:"
+
+#: yyagl/racing/car/gui.py:159 yyagl/racing/car/gui.py:162
 msgid "low"
 msgstr "basso"
 
-#: yyagl/racing/car/gui.py:211
+#: yyagl/racing/car/gui.py:163
 msgid "hi"
 msgstr "alto"
 
-#: yyagl/racing/race/event.py:55
+#: yyagl/racing/race/event.py:57
 #, python-format
 msgid "press %s to respawn"
 msgstr "premi %s per respawnare"
 
-#: yyagl/racing/race/gui/countdown.py:20
+#: yyagl/racing/race/gui/countdown.py:19
 msgid "GO!"
 msgstr "VIA!"
 
-#: yyagl/racing/race/gui/results.py:42
+#: yyagl/racing/race/gui/results.py:34
 msgid "LAP"
 msgstr "GIRO"
 
-#: yyagl/racing/race/gui/results.py:43
+#: yyagl/racing/race/gui/results.py:35
 msgid "TIME"
 msgstr "TEMPO"
 
-#: yyagl/racing/race/gui/results.py:44
+#: yyagl/racing/race/gui/results.py:36
 msgid "RANKING"
 msgstr "CLASSIFICA"
 
-#: yyagl/racing/race/gui/results.py:75
+#: yyagl/racing/race/gui/results.py:49
 msgid "share:"
 msgstr "condividi:"
 
-#: yyagl/racing/race/gui/results.py:105
+#: yyagl/racing/race/gui/results.py:76
 msgid "Continue"
 msgstr "Continua"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:41
+#: yyagl/racing/race/gui/loading/loadingpage.py:24
 msgid "LOADING..."
 msgstr "CARICAMENTO..."
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:48
+#: yyagl/racing/race/gui/loading/loadingpage.py:32
 msgid "track: "
 msgstr "pista: "
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:58
+#: yyagl/racing/race/gui/loading/loadingpage.py:42
 msgid "Starting grid"
 msgstr "Griglia di partenza"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:88
+#: yyagl/racing/race/gui/loading/loadingpage.py:80
 msgid "Ranking"
 msgstr "Classifica"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:116
+#: yyagl/racing/race/gui/loading/loadingpage.py:89
 msgid "Controls"
 msgstr "Controlli"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:120
+#: yyagl/racing/race/gui/loading/loadingpage.py:93
 msgid "joypad"
 msgstr "joypad"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:125
+#: yyagl/racing/race/gui/loading/loadingpage.py:97
 msgid "accelerate"
 msgstr "accelerazione"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:130
+#: yyagl/racing/race/gui/loading/loadingpage.py:98
 msgid "brake/reverse"
 msgstr "frena/indietro"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:135
+#: yyagl/racing/race/gui/loading/loadingpage.py:99
 msgid "left"
 msgstr "sinistra"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:140
+#: yyagl/racing/race/gui/loading/loadingpage.py:100
 msgid "right"
 msgstr "destra"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:145
+#: yyagl/racing/race/gui/loading/loadingpage.py:101
 msgid "fire"
 msgstr "fuoco"
 
-#: yyagl/racing/race/gui/loading/loadingpage.py:150
+#: yyagl/racing/race/gui/loading/loadingpage.py:102
 msgid "respawn"
 msgstr "respawn"
+
+#: yyagl/engine/gui/mainpage.py:40
+msgid "version: "
+msgstr "versione: "
+
+#: yyagl/engine/gui/page.py:147
+msgid "Back"
+msgstr "Indietro"
